[PROD-8240] Fix error overflow outside container in smaller screens

--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -2406,6 +2406,12 @@ h2.has_tutorial_btn .bbapp-tutorial-btn p {
   border-radius: 4px;
 }
 
+@media screen and (max-width: 782px) {
+  .bb-error-section {
+    margin-right: 0;
+  }
+}
+
 .bb-warning-section-wrap.hidden-header > th {
   opacity: 0;
   visibility: hidden;
