--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -2562,6 +2562,10 @@ h2.has_tutorial_btn {
 	line-height: 1.5;
 	border: 1px solid rgb(255, 197, 202);
 	border-radius: 4px;
+
+	@media screen and (max-width: 782px) {
+		margin-left: 0;
+	}
 }
 
 .bb-warning-section-wrap.hidden-header > th {
